Fix sidebar title text, use ALKilnInTheP... to match package name

--- a/docs/alkiln/security.mdx
+++ b/docs/alkiln/security.mdx
@@ -368,7 +368,7 @@ Right now Story Tables are unable to use [workflow environment variables](writin
 [^org_secrets]: [GitHub organization secrets](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-an-organization) can be useful if an organization wants to create a variable that all of its repositories will be able to use and avoid creating that secret in every individual repository.
 
 
-### How to use sensitive data in <AutoDIY/> tests {#sensitive-info-diy}
+### How to use sensitive data in <!-- ALKilnInThePlayground --> <AutoDIY/> tests {#sensitive-info-diy}
 
 **This is for:** <AutoDIY/> tests
 
@@ -401,7 +401,7 @@ We recommend that you start your environment variable names with "ALKILN_". That
 Right now Story Tables are unable to use [workflow environment variables](writing_tests.mdx#env-vars) to fill in fields.
 
 
-### <KittyLitter/> tests {#sandbox}
+### <!-- GitHub Sandbox --> <KittyLitter/> tests {#sandbox}
 
 **This is for any packages that:** have <KittyLitter/> tests
 
@@ -675,7 +675,7 @@ In your GitHub [workflow run console](https://docs.github.com/en/actions/quickst
 If you are worried about logs or artifacts that already exist, you can [delete those](#github-output).
 
 
-### Worry less: <AutoDIY/> tests already freeze your ALKiln version {#playground-version}
+### Worry less: <!-- ALKilnInThePlayground --> <AutoDIY/> tests already freeze your ALKiln version {#playground-version}
 
 **This is for any packages that:** use <AutoDIY/> tests
 
