--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -318,7 +318,7 @@ Possible reasons for missing artifacts for <GTOYS/> and <KittyLitter/> tests:
 - GitHub itself had a problem. This is pretty rare. It can cause a failure at any point in the test. You can [check GitHub's status](https://www.githubstatus.com/). Again, the problem would have to be happening to a lot of people at once for it to show up on that site.
 
 
-## <KittyLitter/> Docker trouble (advanced) {#docker-container}
+## <!-- GitHub Sandbox --> <KittyLitter/> Docker trouble (advanced) {#docker-container}
 
 **This is for:** <KittyLitter/> tests
 
@@ -549,7 +549,7 @@ Is this for when ALKiln gets invalid answer feedback that prevents continuing?
 -->
 
 <!--
-## GitHub tests are passing, but <AutoDIY/> tests are failing
+## GitHub tests are passing, but <   !-- ALKilnInThePlayground --   > <AutoDIY/> tests are failing
 
 Check if your GitHub workflow file is using the [`ALKILN_TAG_EXPRESSION` input](writing_tests.mdx#optional-inputs). Tags limit which tests you are running. You might be only running a test that happens to be passing.
 -->
