--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -1590,7 +1590,7 @@ For the items that have values with sensitive information, you first create a [G
 ```
 
 
-### Required inputs for <GTOYS/> tests {#githubNyou-inputs}
+### Required inputs for <!-- GitHub+You --> <GTOYS/> tests {#githubNyou-inputs}
 
 **This is for:** <GTOYS/> tests
 
@@ -1620,7 +1620,7 @@ These are values you can put in your workflow file directly under the `with:` ke
 [^org]: If your server is part of a GitHub organization, we recommend creating some of these values as organization secrets. That way, if you need to change the value of an input or environment variable you can do it one place.
 
 
-### Required inputs for <KittyLitter/> tests {#sandbox-inputs}
+### Required inputs for <!-- GitHub Sandbox --> <KittyLitter/> tests {#sandbox-inputs}
 
 **This is for:** <KittyLitter/> tests
 
@@ -1664,7 +1664,7 @@ Use these inputs in the same way and in the same places as the required inputs. 
 ```
 
 
-### Optional inputs just for <GTOYS/> tests {#githubNyou-optional-inputs}
+### Optional inputs just for <!-- GitHub+You --> <GTOYS/> tests {#githubNyou-optional-inputs}
 
 **This is for:** <GTOYS/> tests
 
@@ -1694,7 +1694,7 @@ Use these inputs in the same way and in the same places as the required inputs. 
 [^slow]: This also sometimes affects tests that fail due to genuine errors. Sadly, these types of failures look the same to ALKiln as a server reloading. That means that increasing the maximum server reload time will make some kinds of tests take an extra long time to fail.
 
 
-### Optional inputs just for <KittyLitter/> tests {#sandbox-optional-inputs}
+### Optional inputs just for <!-- GitHub Sandbox --> <KittyLitter/> tests {#sandbox-optional-inputs}
 
 **This is for:** <KittyLitter/> tests
 
@@ -2064,7 +2064,7 @@ You can run <AutoDIY/> tests manually whenever you want to.
 <!-- TODO: Add images of picking new version -->
 
 
-### <GTOYS/> test stages {#gNy-stages}
+### <!-- GitHub+You --> <GTOYS/> test stages {#gNy-stages}
 
 **This is for:** <GTOYS/> tests
 
@@ -2089,7 +2089,7 @@ When all the tests finish, ALKiln cleans up the tests.
 1. It makes the [test output](#artifacts), like the report and Scenario folders.
 
 
-### <AutoDIY/> test stages {#diy-stages}
+### <!-- ALKilnInThePlayground --> <AutoDIY/> test stages {#diy-stages}
 
 **This is for:** <AutoDIY/> tests
 
@@ -2106,7 +2106,7 @@ When all the tests finish, ALKiln cleans up the tests. It creates the [test outp
 <!-- TODO: 1. ALKiln deletes those files from your server. (Check on this before adding it. This might actually be in setup) -->
 
 
-### <KittyLitter/> test stages {#sandbox-stages}
+### <!-- GitHub Sandbox --> <KittyLitter/> test stages {#sandbox-stages}
 
 **This is for:** <KittyLitter/> tests
 
@@ -2170,7 +2170,7 @@ Either way, ALKiln makes the [artifacts](#artifacts) for the tests, like the rep
 
 
 <!--
-### Running <AutoDIY/> tests {#diy-run}
+### Running <   !-- ALKilnInThePlayground --   > <AutoDIY/> tests {#diy-run}
 
 **This is for:** <AutoDIY/> tests.
 
