Correct typos and other small issues based on github comparison

--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -1936,7 +1936,7 @@ You can [make secrets for individual GitHub repositories](https://docs.github.co
     # other code
   ```
 
-  Remember to create a [separate account](security.mdx#test_accounts) for that "user".
+  Remember to create a [separate account](security.mdx#test_accounts) for that "user". <span id="org-secrets"></span>
 
 2. GitHub secrets are useful for sharing values between GitHub organization repositories. All the repositories of a GitHub organization can see its secrets, so you can affect all of those repositories at once from one location.
 
