Add deprecation warning for "I upload" Step

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -891,7 +891,7 @@ This will compare all of the text in the baseline PDF with all of the text in th
 
 ---
 
-([Moving](writing_tests.mdx#upload))
+([Moving concept](writing_tests.mdx#upload). Step deprecated in favor of regular variable setting)
 
 Use the `upload` step to upload one or more files. You must store files that you plan to upload in your ["Sources" folder](https://docassemble.org/docs/playground.html#sources) along with your tests.
 
